Fix: overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,7 @@ body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   background-color: white;
+  overflow: auto;
 }
 
 *::selection {
